--- a/style.css
+++ b/style.css
@@ -155,7 +155,11 @@ main {
         border-radius: 50px;
         box-shadow: 0 0 20px #0ff;
         position: relative;
-        
+        left: 40px;
+    }
+
+    .resumeimg {
+        border-radius: 0;
     }
 
 .educationsection, .projectsection, .contactussection {
@@ -210,8 +214,90 @@ main {
     background-color: rgb(5, 1, 252);
 }
 
+.programinglang p {
+    display: inline;
+    text-align: justify;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.programinglang {
+
+    display: flex;
+    justify-content: space-between;
+    margin: 8%;
+}
+
+.weblang p {
+    display: inline;
+    text-align: justify;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+    
+.weblang {
+
+    display: flex;
+    justify-content: space-between;
+    margin: 8%;
+}
 
 
+.skillh1 {
+    margin: 5% 0 0 10%;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.Proglang {
+       padding: 30px;
+       width: 20%;
+       border-radius: 20px;
+       height: 350px;
+       border: 2px solid #0ff;
+       box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff;
+}
+
+.weblang4 li {
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin-top: 11px;
+}
+
+.weblang4 {
+    padding: 30px;
+       width: 40%;
+       margin: auto;
+       padding-left: 5%;
+       border-radius: 20px;
+       height: 500px;
+       border: 2px solid #0ff;
+       box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff;
+}
+
+.weblang3 {
+    
+       width: 250px;
+       text-align: center;
+       padding-top: 60px;
+       border-radius: 200px;
+       height: 250px;
+       border: 2px solid #0ff;
+       box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff;
+}
+
+.weblang2 {
+       padding: 30px;
+       width: 22%;
+       border-radius: 20px;
+       height: 200px;
+       border: 2px solid #0ff;
+       box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff;
+}
+.weblang1 {
+       padding: 30px;
+       width: 28%;
+       border-radius: 20px;
+       height: 300px;
+       border: 2px solid #0ff;
+       box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff;
+}
 
 
   /* Footer */
