--- a/style.css
+++ b/style.css
@@ -150,8 +150,16 @@ main {
 
    }
 
+   .sociallogo img {
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+    background-color: rgb(112, 217, 243);
+    border-radius: 20px;
+   }
+
     .sectionimg {
-        width: 350px;
+        width: 300px;
         border-radius: 50px;
         box-shadow: 0 0 20px #0ff;
         position: relative;
@@ -299,6 +307,37 @@ main {
        box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff;
 }
 
+  /* Resume page */
+
+  .resumediv {
+    width: 100%;
+    padding: 100px;
+    text-align: center;    
+  }
+
+  .resumediv a {
+    color: white;
+    background-color: darkblue;
+    text-decoration: none;
+    font-size: 1.6vw;
+    margin: 10px;
+    padding: 10px 20px;
+    border: 2px solid #0ff;
+    border-radius: 10px;
+    box-shadow: 0 0 5px #0ff, 0 0 15px #0ff, 0 0 25px #0ff;
+  }
+
+  .resumediv img {
+    margin: auto;
+    margin-top: 100px;
+    border: 2px solid #0ff;
+    box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 30px #0ff;
+  }
+
+  .resumediv label {
+    font-size: large;
+    margin: 20px;
+  }
 
   /* Footer */
 
